# omi2_evt

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/omi2/omi2/: omi2_nrf5340_cpuapp.dts
boards/omi_nrf5340/omi_nrf5340/: omi_nrf5340-pinctrl.dtsi  omi_nrf5340_nrf5340_cpuapp.dts  omi_nrf5340_nrf5340_cpuapp_ns.dts  omi_nrf5340_nrf5340_cpunet.dts
drivers/: Kconfig
drivers/t5838/: Kconfig  t5838.h  t5838_nrfx_pdm.c
dts/bindings/: t5838.yaml
src/: battery.c  ble.c  button.c  imu.c  led.c  main.c  mic.c  motor.c  sd.c  spi_flash.c  systemoff.c
